# serializer version: 1
# name: test_all_entities[binary_sensor.test_test_com_chlorine_status-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.test_test_com_chlorine_status',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.PROBLEM: 'problem'>,
    'original_icon': None,
    'original_name': 'Chlorine status',
    'platform': 'poolsense',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'chlorine_status',
    'unique_id': 'test@test.com-Chlorine Status',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[binary_sensor.test_test_com_chlorine_status-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'attribution': 'PoolSense Data',
      'device_class': 'problem',
      'friendly_name': 'test@test.com Chlorine status',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.test_test_com_chlorine_status',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_all_entities[binary_sensor.test_test_com_ph_status-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.test_test_com_ph_status',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.PROBLEM: 'problem'>,
    'original_icon': None,
    'original_name': 'pH status',
    'platform': 'poolsense',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'ph_status',
    'unique_id': 'test@test.com-pH Status',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[binary_sensor.test_test_com_ph_status-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'attribution': 'PoolSense Data',
      'device_class': 'problem',
      'friendly_name': 'test@test.com pH status',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.test_test_com_ph_status',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
